// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modal saving... is shown on assignment update 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    transparent={true}
    visible={true}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgba(0,0,0,0.6)",
              "borderRadius": 12,
            },
            Object {
              "backgroundColor": "rgba(0,0,0,0.8)",
            },
            Object {
              "height": 170,
              "width": 170,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#fff",
                    "fontFamily": ".SFUIDisplay-semibold",
                    "fontSize": 24,
                  },
                  Array [
                    Object {
                      "alignItems": "center",
                      "color": "#fff",
                      "textAlign": "center",
                    },
                    undefined,
                  ],
                ]
              }
            >
              Saving
            </Text>
          </View>
        </View>
        <ActivityIndicator
          animating={true}
          color="#fff"
          hidesWhenStopped={true}
          size="large"
          style={
            Object {
              "flex": 1,
              "marginTop": -40,
            }
          }
        />
      </View>
    </View>
  </Modal>
  <RCTScrollView
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#F5F5F5",
              "borderBottomColor": "#D8DBDE",
              "borderBottomWidth": 0.5,
              "borderTopColor": "#D8DBDE",
              "borderTopWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              Object {
                "color": "#2D3B45",
                "marginBottom": 8,
                "marginLeft": 16,
                "marginTop": 16,
              },
            ]
          }
        >
          Title
        </Text>
      </View>
      <View
        style={
          Object {
            "paddingBottom": 8,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 8,
          }
        }
      >
        <TextInput
          multiline={true}
          onChangeText={[Function]}
          placeholder="Title"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {},
              Object {
                "height": 45,
              },
            ]
          }
          testID="titleInput"
          value="learn to write code"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`renders 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    transparent={true}
    visible={false}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgba(0,0,0,0.6)",
              "borderRadius": 12,
            },
            Object {
              "backgroundColor": "rgba(0,0,0,0.8)",
            },
            Object {
              "height": 170,
              "width": 170,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#fff",
                    "fontFamily": ".SFUIDisplay-semibold",
                    "fontSize": 24,
                  },
                  Array [
                    Object {
                      "alignItems": "center",
                      "color": "#fff",
                      "textAlign": "center",
                    },
                    undefined,
                  ],
                ]
              }
            >
              Saving
            </Text>
          </View>
        </View>
        <ActivityIndicator
          animating={true}
          color="#fff"
          hidesWhenStopped={true}
          size="large"
          style={
            Object {
              "flex": 1,
              "marginTop": -40,
            }
          }
        />
      </View>
    </View>
  </Modal>
  <RCTScrollView
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#F5F5F5",
              "borderBottomColor": "#D8DBDE",
              "borderBottomWidth": 0.5,
              "borderTopColor": "#D8DBDE",
              "borderTopWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              Object {
                "color": "#2D3B45",
                "marginBottom": 8,
                "marginLeft": 16,
                "marginTop": 16,
              },
            ]
          }
        >
          Title
        </Text>
      </View>
      <View
        style={
          Object {
            "paddingBottom": 8,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 8,
          }
        }
      >
        <TextInput
          multiline={true}
          onChangeText={[Function]}
          placeholder="Title"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {},
              Object {
                "height": 45,
              },
            ]
          }
          testID="titleInput"
          value="learn to write code"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;
